2004-07-26  Hartmut Honisch  <hhonisch@users.sourceforge.net>

	* include/commctrl.h (TreeView_SetItemState): Define macro.

2004-07-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (CMYK): Correct macro. Group CMYK/RGB
        macros together.

2004-07-24  Brodie Thiesfield  <brofield@users.sourceforge.net>

	* include/shlobj.h (FILEDESCRIPTOR): Unicode it.
	(FILEGROUPDESCRIPTOR): LIkewise.

2004-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* winbase.h (IsWow64Process): Add missing WINAPI qualifier.

2004-06-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (IMAGE_ORDINAL_FLAG): Map to ...
	(IMAGE_ORDINAL_FLAG{32,64}: New defines.
	(IMAGE_SNAP_BY_ORDINAL): Map to ...
	(IMAGE_SNAP_BY_ORDINAL{32,64}: New defines.
	(IMAGE_ORDINAL): Map to ...
	(IMAGE_ORDINAL{32,64}: New defines.
	(IMAGE_THUNK_DATA):  Map to ...
	(IMAGE_THUNK_DATA{32,64}: New structures.
	(IMAGE_THUNK_DATA): Map to ...
	(IMAGE_THUNK_DATA{32,64}: New structures.
	(IMAGE_IMPORT_DESCRIPTOR):  Map to ...
	(IMAGE_IMPORT_DESCRIPTOR{32,64}: New structures.
	(IMAGE_IMAGE_TLS_DIRECTORY)  Map to ...
	(IMAGE_IMAGE_TLS_DIRECTORY{32,64}: New structures.

2004-06-16  Bang Jun-Young <junyoung@NetBSD.org>

	* w32api/include/winnt.h (WAITORTIMERCALLBACKFUNC): Protect with 
	_WIN32_WINNT >= 0x0500.

2004-06-05  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winbase.h (GetWriteWatch): Correct prototype.
	(WRITE_WATCH_FLAG_RESET): Define.
	Thanks to Sergey Philippov <phis@users.sourceforge.net>.

2004-06-02  Rocher Laurent  <lrocher@users.sourceforge.net>

	* include/commctrl.h (Animate_OpenEx): Define.
	(DateTime_GetSystemTime, DateTime_SetSystemTime): Correct names.
	(ListView_GetNumberOfWorkAreas): Correct macro.
	(ListView_SetUnicodeFormat, ListView_GetUnicodeFormat,
	ListView_SetItemCountEx, ListView_GetISearchString,
	TreeView_GetLastVisible, Header_CreateDragImage,
	Header_SetImageList, Header_GetImageList): Define.